tutorial-5-kube/02-service.yml
apiVersion: v1
kind: Service
metadata: 
  name: nginx
  namespace: basic-k8s
  labels:
    name: nginx
spec:
  selector:
    name: nginx
  ports:
  - name: ngx8080
    port: 8080
    targetPort: 8080
    protocol: TCP
  - name: ngx8443
    port: 8443
    targetPort: 8443
    protocol: TCP
