tutorial-5-kube/03-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata: 
  name: ingress 
  namespace: basic-k8s
  labels:
    name: ingress
  spec:
    rules:
    - host: kubernetes.docker.internal
      http: 
        paths:
        - path: /
          backend: 
            serviceName: nginx
            servicePport: 8080
